--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,23 +1,23 @@
 cmake_minimum_required(VERSION 3.14)
-project(app_pocket_munnin)
+project(app_battle_for_rokugan)
 
-set (pm_src
+set (bfr_src
     main.cpp
     )
 
 set (CMAKE_AUTORCC ON)
 find_package(Qt6 COMPONENTS Qml Quick)
 
-add_executable(app_pocket_munnin ${pm_src} pocket_munnin.qrc)
+add_executable(app_battle_for_rokugan ${bfr_src} battle_for_rokugan.qrc)
 
-set_target_properties(app_pocket_munnin PROPERTIES OUTPUT_NAME "pocket_munnin")
-target_link_libraries(app_pocket_munnin
+set_target_properties(app_battle_for_rokugan PROPERTIES OUTPUT_NAME "battle_for_rokugan")
+target_link_libraries(app_battle_for_rokugan
     rc_af_base
-    lib_baseAF lib_quickAF lib_currencyAF gui_trinn
+    lib_baseAF lib_quickAF lib_currencyAF gui_bfr
     Qt6::Quick Qt6::Qml)
 
-target_compile_features(app_pocket_munnin PUBLIC cxx_std_17)
-target_include_directories(app_pocket_munnin PUBLIC include
+target_compile_features(app_battle_for_rokugan PUBLIC cxx_std_17)
+target_include_directories(app_battle_for_rokugan PUBLIC include
     PUBLIC $<TARGET_PROPERTY:lib_baseAF,INTERFACE_INCLUDE_DIRECTORIES>
     PUBLIC $<TARGET_PROPERTY:lib_quickAF,INTERFACE_INCLUDE_DIRECTORIES>
     PUBLIC $<TARGET_PROPERTY:lib_currencyAF,INTERFACE_INCLUDE_DIRECTORIES>
