add base struct and class, fill border, province and region, add ts files

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -6,14 +6,18 @@ set (bfr_src
     )
 
 set (CMAKE_AUTORCC ON)
-find_package(Qt6 COMPONENTS Qml Quick)
+find_package(Qt6 COMPONENTS Qml Quick LinguistTools)
 
-add_executable(app_battle_for_rokugan ${bfr_src} battle_for_rokugan.qrc)
+add_executable(app_battle_for_rokugan ${bfr_src} battle_for_rokugan.qrc ${TS_FILES})
+#qt6_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})
+#qt6_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} bfr_en.ts bfrhelloworld_de.ts)
 
 set_target_properties(app_battle_for_rokugan PROPERTIES OUTPUT_NAME "battle_for_rokugan")
 target_link_libraries(app_battle_for_rokugan
     rc_af_base
-    lib_baseAF lib_quickAF lib_currencyAF gui_bfr
+    lib_baseAF lib_quickAF
+#    lib_currencyAF gui_bfr
+    lib_bfr
     Qt6::Quick Qt6::Qml)
 
 target_compile_features(app_battle_for_rokugan PUBLIC cxx_std_17)
