Make almost battle class, change turn token handler, add new class as base class for place where we can set tokens

--- a/lib_bfr/CMakeLists.txt
+++ b/lib_bfr/CMakeLists.txt
@@ -33,6 +33,8 @@ set (lib_bfr_cpp
     provinceToken.cpp
     region.cpp
     turnToken.cpp
+    turnTokenPlace.h
+    turnTokenPlace.cpp
     turnManager.cpp
     battle.cpp
     clanStats.cpp
